--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xcb-util (0.2+git2008030901-1) unstable; urgency=low
+xcb-util (0.2+git36-1) unstable; urgency=low
 
   [ Arnaud Fontaine ]
   * debian/control:
@@ -16,8 +16,9 @@ xcb-util (0.2+git2008030901-1) unstable; urgency=low
 
   [ Julien Danjou ]
   * Switch to git based packaging
+  * Tweak get-orig-source
 
- -- Julien Danjou <acid@debian.org>  Thu, 12 Jun 2008 08:44:29 +0200
+ -- Julien Danjou <acid@debian.org>  Thu, 12 Jun 2008 09:31:29 +0200
 
 xcb-util (0.2-1) experimental; urgency=low
 
