Add Vcs-* field to debian/control
Signed-off-by: Julien Danjou <julien@danjou.info>

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,9 +18,11 @@ xcb-util (0.2+git36-1) unstable; urgency=low
   * Switch to git based packaging
   * Tweak get-orig-source
   * Add autoconf as build dependency
-  * Bump standard version
+  * debian/control
+   + Bump standard version
+   + Add Vcs-* field
 
- -- Julien Danjou <acid@debian.org>  Thu, 12 Jun 2008 10:17:53 +0200
+ -- Julien Danjou <acid@debian.org>  Thu, 12 Jun 2008 10:20:10 +0200
 
 xcb-util (0.2-1) experimental; urgency=low
 
