--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xcb-util (0.2+git36-2) UNRELEASED; urgency=low
+
+  * Fix sections, set libs for libs packages and libdevel for
+    -dev packages (Closes: #491534)
+
+ -- Julien Danjou <acid@debian.org>  Tue, 22 Jul 2008 10:02:18 +0200
+
 xcb-util (0.2+git36-1) unstable; urgency=low
 
   [ Arnaud Fontaine ]
