--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xcb-util (0.3.3-1) asimov; urgency=low
+
+  * New upstream release.
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Sat, 21 Mar 2009 23:09:16 +0600
+
 xcb-util (0.2.1+git2-1) asimov; urgency=low
 
   * First build for IPlinux.
@@ -58,4 +64,3 @@ xcb-util (0.2-1) experimental; urgency=low
   * Initial release (Closes: #437681)
 
  -- Julien Danjou <acid@debian.org>  Tue, 25 Mar 2008 19:14:42 +0100
-
